[gd_scene load_steps=4 format=3 uid="uid://bcoioblesr22e"]

[ext_resource type="Script" path="res://scenes/ResultUI.gd" id="1_p14af"]
[ext_resource type="Texture2D" uid="uid://gk7udv2vih6r" path="res://assets/white.png" id="2_ffygg"]
[ext_resource type="PackedScene" uid="uid://coy1fxvo8tcdq" path="res://scenes/SizeOptions.tscn" id="3_lnfao"]

[node name="ResultUI" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0
script = ExtResource("1_p14af")

[node name="Center" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="Result" type="TextureRect" parent="Center"]
layout_mode = 2
texture = ExtResource("2_ffygg")
flip_v = true

[node name="Left" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="Right" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 8

[node name="Lines" type="VBoxContainer" parent="Right"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="SizeButton" type="Button" parent="Right/Lines"]
layout_mode = 2
text = "Auflösung
ändern"
alignment = 2

[node name="SizeOptions" parent="Right/Lines" instance=ExtResource("3_lnfao")]
visible = false
layout_mode = 2

[node name="MoreButton" type="Button" parent="Right/Lines"]
layout_mode = 2
text = "Mehr Punkte"
alignment = 2

[node name="SaveButton" type="Button" parent="Right/Lines"]
layout_mode = 2
text = "Speichern"
alignment = 2

[node name="Bottom" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="Sep" type="HBoxContainer" parent="Bottom"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 64

[node name="CenterButton" type="CheckButton" parent="Bottom/Sep"]
layout_mode = 2
text = "Bild zentriert"

[connection signal="pressed" from="Right/Lines/SizeButton" to="." method="_on_size_button_pressed"]
[connection signal="close_me" from="Right/Lines/SizeOptions" to="." method="_on_size_options_close_me"]
[connection signal="value_changed" from="Right/Lines/SizeOptions" to="." method="_on_size_options_value_changed"]
[connection signal="pressed" from="Right/Lines/MoreButton" to="." method="_on_more_button_pressed"]
[connection signal="pressed" from="Right/Lines/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="Bottom/Sep/CenterButton" to="." method="_on_center_button_pressed"]
